<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_gravity_compensation</name>
  <version>0.1.0</version>
  <description>Web-guided torque-only gravity parameter calibration for both Unitree G1 arms.</description>

  <maintainer email="liruigang20131115@126.com">madderscientist</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>unitree_api</exec_depend>
  <exec_depend>unitree_hg</exec_depend>
  <exec_depend>unitree_g1_description</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>