<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kwr57_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for the KWR57 6-axis force/torque sensor (CAN, bridge mode). Thin rclpy wrapper that imports the standalone KWR57-SDK (kwr57_sensor) Python library.</description>

  <maintainer email="unitree@example.com">unitree</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- KWR57-SDK(kwr57_sensor) 与 python-can 由 pip 装进 ROS 2 的 Python；见 README。 -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
