<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Robot bringup with separate whole-body and end-effector launch entry points.</description>

  <maintainer email="liruigang20131115@126.com">madderscientist</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>canalystii_native_bridge</exec_depend>
  <exec_depend>camera_node</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>gloria_ros</exec_depend>
  <exec_depend>ikt_core</exec_depend>
  <exec_depend>ikt_pose_commander</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>robot_test_dashboard</exec_depend>
  <exec_depend>unitree_g1_description</exec_depend>
  <exec_depend>unitree_g1_ros2_control</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
